--- a/webapp/user_profile/templates/user_profile/profile.html
+++ b/webapp/user_profile/templates/user_profile/profile.html
@@ -23,6 +23,8 @@
                         {% csrf_token %}
                         {% bootstrap_form user_detail_form %}
                         {% bootstrap_form user_profile_form %}
+                        {% bootstrap_form student_form %}
+                        {% bootstrap_form messmanager_form %}
                         {% if redirect_field_value %}
                         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
                         {% endif %}
