--- a/webapp/user_registration_bs4/templates/header.html
+++ b/webapp/user_registration_bs4/templates/header.html
@@ -30,6 +30,9 @@
                     <a class="nav-link " href="/accounts/signup/">Signup</a>
                 </li>
                 {% endif %}
+                <li>
+                    <a class="nav-link " href="/scan_result">manas</a>
+                </li>
 
             </ul>
         </div>
