--- a/webapp/user_profile/templates/user_profile/result.html
+++ b/webapp/user_profile/templates/user_profile/result.html
@@ -6,6 +6,8 @@
 {% block head_title %}{% trans "User Profile" %}{% endblock %}
 
 {% block content %}
+<h2 class="h6">scan details</h2>
     {{ user }}
     {{ current_user }}
+    {{qr_val}}
 {% endblock %}
