--- a/webapp/user_profile/templates/user_profile/dashboard.html
+++ b/webapp/user_profile/templates/user_profile/dashboard.html
@@ -6,9 +6,71 @@
 {% block head_title %}{% trans "User Profile" %}{% endblock %}
 
 {% block content %}
-    {{ user }}
-    {{ current_user }}
-    {{refund}}
-    {{meal}}
-    {{remaining_amount}}
+    <div class="x_panel" style="margin-top: 1vh; border-style: none">
+        <div style="display: inline-flex">
+          <h2 style="font-size: 3vh; margin-left: 1vw"><b>Mess Timeline</b></h2>
+        </div>
+        <hr>
+        <div class="x_content">
+                <div class="row bs-wizard" style="border-bottom:0; margin: 0 auto; margin-top: 2vh">
+                    <div class="{% if meal_type >= 0 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                    <div class="text-center bs-wizard-stepnum">Breakfast</div>
+                    <div class="progress">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Display Menu</div>
+                    </div>
+    
+                    <div class="{% if meal_type >= 1 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                    <div class="text-center bs-wizard-stepnum">Lunch</div>
+                    <div class="progress">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Menu</div>
+                    </div>
+    
+                    <div class="{% if meal_type >= 2 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                    <div class="text-center bs-wizard-stepnum">Snacks</div>
+                    <div class="progress">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Menu here</div>
+                    </div>
+                    <div class="{% if meal_type >= 3 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                    <div class="text-center bs-wizard-stepnum">Dinner</div>
+                    <div class="progress">
+                        <div class="progress-bar"></div>
+                    </div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Menu here</div>
+                    </div>
+                    <div class="col-xs-2 col-md-4" >
+                        <div class="card bg-light text-dark">
+                            <div class="card-body">
+                                <strong>Remaining Amount :</strong><br>
+                                {{ refund }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-2 col-md-8" >
+                            <div class="card bg-light text-dark">
+                                <div class="card-body">
+                                    <p>Add contents</p>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-xs-2 col-md-4" >
+                            <div class="card bg-light text-dark">
+                                <div class="card-body">
+                                    <strong>Spend :</strong><br>
+                                    {{ amount_remaining }}
+                                </div>
+                            </div>
+                        </div>
+                </div>
+        </div>
+    </div>
 {% endblock %}
