--- a/webapp/user_registration_bs4/templates/base.html
+++ b/webapp/user_registration_bs4/templates/base.html
@@ -10,6 +10,153 @@
 
 
 </head>
+<style>
+    .card {
+      background: #fff;
+      border-radius: 2px;
+      display: inline-block;
+      height: auto;
+      margin: 1rem;
+      width: 90%;
+    }
+  
+    .card-1 {
+      box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  
+    }
+  
+    .card-1:hover {
+      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  
+    }
+  
+    .bs-wizard {
+      margin-top: 40px;
+    }
+  
+    /*Form Wizard*/
+    .bs-wizard {
+      border-bottom: solid 1px #e0e0e0;
+      padding: 0 0 10px 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step {
+      padding: 0;
+      position: relative;
+    }
+  
+    .bs-wizard > .bs-wizard-step + .bs-wizard-step {
+    }
+  
+    .bs-wizard > .bs-wizard-step .bs-wizard-stepnum {
+      color: #595959;
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
+  
+    .bs-wizard > .bs-wizard-step .bs-wizard-info {
+      color: #999;
+      font-size: 14px;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .bs-wizard-dot {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      display: block;
+      background: lightskyblue;
+      top: 45px;
+      left: 50%;
+      margin-top: -15px;
+      margin-left: -15px;
+      border-radius: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .bs-wizard-dot:after {
+      content: ' ';
+      width: 14px;
+      height: 14px;
+      background: skyblue;
+      border-radius: 50px;
+      position: absolute;
+      top: 8px;
+      left: 8px;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .progress {
+      position: relative;
+      border-radius: 0px;
+      height: 8px;
+      box-shadow: none;
+      margin: 20px 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .progress > .progress-bar {
+      width: 0px;
+      box-shadow: none;
+      background: skyblue;
+    }
+  
+    .bs-wizard > .bs-wizard-step.complete > .progress > .progress-bar {
+      width: 100%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.active > .progress > .progress-bar {
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:first-child.active > .progress > .progress-bar {
+      width: 0%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:last-child.active > .progress > .progress-bar {
+      width: 100%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot {
+      background-color: #f5f5f5;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot:after {
+      opacity: 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step:first-child > .progress {
+      left: 50%;
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:last-child > .progress {
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled a.bs-wizard-dot {
+      pointer-events: none;
+    }
+  
+    @media (max-width: 1023px) {
+      .hide-0-to-1024 {
+        display: none;
+      }
+    }
+  
+    @media (min-width: 1024px) {
+      .hide-1024-up {
+        display: none;
+      }
+    }
+  
+    /*END Form Wizard*/
+  
+    ul.stats-overview li {
+      width: 15%;
+    }
+  
+    .disabled, .disabled:hover, .disabled:focus {
+      cursor: pointer !important;
+    }
+</style>
 <body>
 
 {% include 'header.html' %}
@@ -17,6 +164,118 @@
 {% block content %}{% endblock %}
 
 {% include 'footer.html' %}
+<script>
+    var i = 0;
+    var labels = [      ]
+    data1 = [      ]
+    new_graph = {
+        type: 'bar',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Pay Package of students over the years',
+                data: data1,
+                backgroundColor:
+                    'rgba(0, 255, 132, 0.2)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                xAxes: [{
+                    stacked: false
+                }],
+                yAxes: [{
+                    stacked: false,
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    }
+
+    var myChart = document.getElementById("payPackageChart").getContext("2d");
+    new Chart(myChart, new_graph);
+</script>
+
+<script>
+    var i = 0;
+    var labels = [      ]
+    data1 = [      ]
+    new_graph = {
+        type: 'bar',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: 'Number of students placed over the years',
+                data: data1,
+                backgroundColor:
+                    'rgba(255, 100, 132, 0.6)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                xAxes: [{
+                    stacked: false
+                }],
+                yAxes: [{
+                    stacked: false,
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    }
+
+    var myChart = document.getElementById("noPlacedChart").getContext("2d");
+    new Chart(myChart, new_graph);
+</script>
+
+
+<script>
+
+  $(document).ready(function () {
+      $("#create").hover(function () {
+          $(this).removeClass("btn-danger");
+          $(this).addClass("btn-success");
+          $(this).text("Send Account Details");
+
+      }, function () {
+          $(this).removeClass("btn-success");
+          $(this).addClass("btn-danger");
+          $(this).text("Account Not Created");
+      });
+
+      $("#resend").hover(function () {
+          $(this).removeClass("btn-success");
+          $(this).addClass("btn-info");
+          $(this).text("Resend Details");
+
+      }, function () {
+          $(this).removeClass("btn-info");
+          $(this).addClass("btn-success");
+          $(this).text("Account Created");
+      });
+
+      var scheduleTable = $('#scheduleTable').dataTable({
+          responsive: true,
+          "paging": false,
+          "ordering": false,
+          "info": false,
+          "searching": false
+      });
+  });
+</script>
+<script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/nprogress/nprogress.js"></script>
+
+<script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/select2/dist/js/select2.full.min.js"></script>
+<script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="https://cdn.iris.nitk.ac.in/new_layout/js/jquery_ujs.js"></script>
+<script src="https://cdn.iris.nitk.ac.in/new_layout/js/custom.js"></script>
+<script src="https://cdn.iris.nitk.ac.in/new_layout/js/bootstrap-responsive-tabs.js"></script>
 
 
 </body>
