--- a/webapp/user_registration_bs4/templates/base.html
+++ b/webapp/user_registration_bs4/templates/base.html
@@ -7,17 +7,26 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/user_registration_bs4.css' %}">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+	<link href="https://bootstrapmade.com/demo/themes/Regna/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/themes/Regna/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/themes/Regna/lib/animate/animate.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body id="main" style="background-color: #efebe4; padding-left: 0px; padding-right: 0px; padding-top: 0px;">
 
 {% include 'header.html' %}
+
+{% include 'user_profile/sidebar.html' %}
+
+
 
 {% block content %}{% endblock %}
 
 {% include 'footer.html' %}
-
 
 </body>
 </html>
