--- a/webapp/user_registration_bs4/templates/footer.html
+++ b/webapp/user_registration_bs4/templates/footer.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+<style type="text/css">
+	#footer {
+	  background: #29413c;
+	  padding: 30px 0;
+	  color: #fff;
+	  font-size: 14px;
+	}
+
+	#footer .copyright {
+	  text-align: center;
+	}
+
+	#footer .credits {
+	  padding-top: 10px;
+	  text-align: center;
+	  font-size: 13px;
+	  color: #ccc;
+	}
+	</style>
+
+<footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong>App_Name</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!--
+          All the links in the footer should remain intact.
+          You can delete the links only if you purchased the pro version.
+          Licensing information: https://bootstrapmade.com/license/
+          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
+        -->
+        Designed by <a href="https://bootstrapmade.com/">Bootstrap4</a>
+      </div>
+    </div>
+  </footer><!-- #footer -->
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
