--- a/webapp/webpages/templates/webpages/docs.html
+++ b/webapp/webpages/templates/webpages/docs.html
@@ -6,5 +6,51 @@
 {% block head_title %}Web Application{% endblock %}
 
 {% block content %}
+<style type="text/css">
+	 .section-header{
+      font-size: 32px;
+      color: #111;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
 
+    h5{
+      font-size: 20px;
+      color: #111;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+</style>
+<br/><br/><br/><br/>
+<h2 class="section-header">User Documentation</h2>
+<hr>
+<div>
+	<h5>Introduction</h5>
+	<p>
+		This web application enables the user (student) to keep track of the amount spent for mess food and hence, the refund they need to receive by the end of the semester, along with daily menu of the chosen mess. It offers auto-scaling and high availability, supports all platforms as it works on browser. Learn how to use the application with this documentation.
+	</p>
+</div>
+
+<div>
+	<h5>Getting Started</h5>
+	<p>
+		Profile Details: Editing your details as you see fit. It re-directs you to the home page after updating the details. You can always come back to this page navigating from the sidebar, which can be seen at the top left side of the navigation bar.
+	</p>
+	<p>
+		The home page provides you with the basic details of the application along with the respective contacts in case of any issues. We assure you that the response would be immediate.
+	</p>
+	<p>
+		Side Bar: There are four functions that this navigation bar does for you.
+		 - Navigate to edit your profile details through 'Profile Details' link.
+		 - Scan the QR code
+	</p>
+</div>
+
+<div>
+<p></p>
+</div>
 {% endblock %}
