--- a/webapp/user_registration_bs4/templates/base.html
+++ b/webapp/user_registration_bs4/templates/base.html
@@ -10,16 +10,19 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<link href="https://bootstrapmade.com/demo/themes/Regna/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+  	<link href="https://bootstrapmade.com/demo/themes/Regna/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/themes/Regna/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/themes/Regna/lib/animate/animate.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body id="main" style="background-color: #efebe4; padding-left: 0px; padding-right: 0px; padding-top: 0px; ">
 
 
-<body>
+
 
 {% include 'header.html' %}
 
