--- a/webapp/webpages/templates/webpages/homepage.html
+++ b/webapp/webpages/templates/webpages/homepage.html
@@ -358,13 +358,13 @@
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="/docs">Documentation</a></h4>
+              <h4 class="title"><a href="/docs" target="_blank" style="text-decoration: none;">Documentation</a></h4>
               <p class="description">Read to find out what more this application can offer.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.9s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="#contact">Contact</a></h4>
+              <h4 class="title"><a href="#contact" style="text-decoration: none;">Contact</a></h4>
               <p class="description">Scroll down to contact us and know more about us.</p>
             </div>
 
@@ -382,22 +382,22 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
-              <h4 class="title"><a href="">Refund Calculation</a></h4>
+              <div class="icon"><i class="fa fa-desktop"></i></div>
+              <h4 class="title">Refund Calculation</h4>
               <p class="description">The application deals with blah blah blah.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
-              <h4 class="title"><a href="">Online Mess Menu</a></h4>
+              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <h4 class="title">Online Mess Menu</h4>
               <p class="description">Mess menu for the current time and day is displayed on the student portal.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fa fa-paper-plane"></i></a></div>
-              <h4 class="title"><a href="">Mess Statistics</a></h4>
+              <div class="icon"><i class="fa fa-paper-plane"></i></div>
+              <h4 class="title">Mess Statistics</h4>
               <p class="description">Mess manager is provided with statistics of the respective mess.</p>
             </div>
           </div>
@@ -405,7 +405,8 @@
   		</div>
 	</section>
 
-	 <section id="contact">
+	<section id="contact">
+		
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contact</h3>
