--- a/webapp/user_registration_bs4/templates/account/email_confirm.html
+++ b/webapp/user_registration_bs4/templates/account/email_confirm.html
@@ -7,12 +7,13 @@
 
 
 {% block content %}
-<div class="container">
+
+<div class="container" style="min-height: 400px; margin-top: 13%;">
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="h4">{% trans "Confirm E-mail Address" %}</h1>
+                    <center><h1 class="h4">{% trans "Confirm E-mail Address" %}</h1></center>
                     <hr>
                     {% if confirmation %}
 
