--- a/webapp/user_registration_bs4/templates/account/login.html
+++ b/webapp/user_registration_bs4/templates/account/login.html
@@ -7,11 +7,8 @@
 
 
 {% block content %}
-<style>
 
-
-</style>
-<div class="container">
+<div class="container" style="min-height: 400px;  margin-top: 8%;>
     <div class="row">
 
         <div class="col col-8  mx-auto">
@@ -81,4 +78,5 @@
 
     </div>
 </div>
+<br><br>
 {% endblock %}
