--- a/webapp/user_registration_bs4/templates/account/password_reset.html
+++ b/webapp/user_registration_bs4/templates/account/password_reset.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="min-height: 400px;  margin-top: 8%;>
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="mt-5 pb-5"></div>
@@ -36,5 +36,5 @@
             </div>
         </div>
     </div>
-</div>
+</div><br><br><br>
 {% endblock %}
