--- a/webapp/user_registration_bs4/templates/account/password_reset_done.html
+++ b/webapp/user_registration_bs4/templates/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" style="min-height: 400px;  margin-top: 13%;">
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="mt-5 pb-5"></div>
