--- a/webapp/user_registration_bs4/templates/account/password_reset_from_key.html
+++ b/webapp/user_registration_bs4/templates/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="min-height: 400px;  margin-top: 8%;">
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="mt-5 pb-5"></div>
@@ -32,5 +32,5 @@
             </div>
         </div>
     </div>
-</div>
+</div><br><br><br>
 {% endblock %}
