--- a/webapp/user_registration_bs4/templates/account/signup_closed.html
+++ b/webapp/user_registration_bs4/templates/account/signup_closed.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 
-<div class="container">
+<div class="container" style="min-height: 400px;  margin-top: 13%;">
                     <div class="mt-5 pb-5"></div>
 
     <div class="row">
