--- a/webapp/user_profile/templates/user_profile/dashboard.html
+++ b/webapp/user_profile/templates/user_profile/dashboard.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 
 {% load i18n %}
@@ -6,77 +7,318 @@
 {% block head_title %}{% trans "User Profile" %}{% endblock %}
 
 {% block content %}
-    {% if notice %}
-    <div class="alert alert-dismissible text-center" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>{{ notice }}</strong>
+<br/><br/><br/>
+<style>
+ /*.card {
+      background: #fff;
+      border-radius: 15px;
+      display: inline-block;
+      height: 150px;
+      margin: 1rem;
+      width: 90%;
+    }*/
+ 
+    .card1:hover {
+      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.22);
+  
+    }
+  
+    .bs-wizard {
+      margin-top: 40px;
+    }
+  
+    /*Form Wizard*/
+    .bs-wizard {
+      border-bottom: solid 1px #e0e0e0;
+      padding: 0 0 10px 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step {
+      padding: 0;
+      position: relative;
+    }
+  
+    .bs-wizard > .bs-wizard-step .bs-wizard-stepnum {
+      color: #595959;
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
+  
+    .bs-wizard > .bs-wizard-step .bs-wizard-info {
+      color: #999;
+      font-size: 14px;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .bs-wizard-dot {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      display: block;
+      background: #8E3E08;
+      top: 45px;
+      left: 50%;
+      margin-top: -15px;
+      margin-left: -15px;
+      border-radius: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .bs-wizard-dot:after {
+      content: ' ';
+      width: 14px;
+      height: 14px;
+      background: #8E3E08;
+      border-radius: 50px;
+      position: absolute;
+      top: 8px;
+      left: 8px;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .progress {
+      position: relative;
+      border-radius: 0px;
+      height: 8px;
+      box-shadow: none;
+      margin: 20px 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step > .progress > .progress-bar {
+      width: 0px;
+      box-shadow: none;
+      background: #8E3E08;
+    }
+  
+    .bs-wizard > .bs-wizard-step.complete > .progress > .progress-bar {
+      width: 100%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.active > .progress > .progress-bar {
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:first-child.active > .progress > .progress-bar {
+      width: 0%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:last-child.active > .progress > .progress-bar {
+      width: 100%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot {
+      background-color: #f5f5f5;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot:after {
+      opacity: 0;
+    }
+  
+    .bs-wizard > .bs-wizard-step:first-child > .progress {
+      left: 50%;
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step:last-child > .progress {
+      width: 50%;
+    }
+  
+    .bs-wizard > .bs-wizard-step.disabled a.bs-wizard-dot {
+      pointer-events: none;
+    }
+  
+    @media (max-width: 1023px) {
+      .hide-0-to-1024 {
+        display: none;
+      }
+    }
+  
+    @media (min-width: 1024px) {
+      .hide-1024-up {
+        display: none;
+      }
+    }
+  
+    /*END Form Wizard*/
+  
+    ul.stats-overview li {
+      width: 15%;
+    }
+  
+    .disabled, .disabled:hover, .disabled:focus {
+      cursor: pointer !important;
+    }
+ 
+    .x_content{
+        padding-left: 25%;
+    }
+    .amount-details, .card1{
+      border-radius: 15px;
+      display: inline-block;
+      height: 100px;
+      margin: 1rem;
+      width: 90%;
+    }
+    .modal {
+      text-align: center;
+    }
+    @media screen and (min-width: 768px) { 
+      .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+      
+      }
+    }
+    .modal-dialog {
+      display: inline-block;
+      text-align: left;
+      vertical-align: middle;
+      font-weight: 100;
+    }
+    .modal-title{
+      font-size: 20px;
+      color: #111;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+    .section-header{
+      font-size: 32px;
+      color: #111;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+    .section-header2{
+      font-size: 20px;
+      color: #110;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+    .card-body {
+      text-align: center;
+      padding-bottom: 40px;
+      color: #29413c;
+    }
+    .section-description {
+      text-align: center;
+      padding-bottom: 40px;
+      color: #999;
+    }
+     button[type="submit"] {
+      background: #868b91;
+      border: 0;
+      padding: 10px 24px;
+      color: #fff;
+      transition: 0.4s;
+    }
+    button[type="submit"]:hover {
+      background: #51d8ad;
+    }
+</style>
+
+
+<div class="x_panel" style="margin-top: 1vh; border-style: none">
+    <center><h2 class="section-header">Dashboard</h2></center><br/>
+   <center> <div style="display: inline-flex">
+      <h4 class="section-header2"><b>Mess Timeline</b></h4>
+    </div></center>
+    <hr>
+    <br/>
+    <p class="section-description">Click the dots to display the respective menu.</p>
+    <div class="x_content">
+            <div class="row bs-wizard" style="border-bottom:0; margin: 0 auto; margin-top: 2vh">
+                <div class="{% if meal_type >= 0 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                <div class="text-center bs-wizard-stepnum"><strong>Breakfast</strong></div>
+                <div class="progress">
+                    <div class="progress-bar"></div>
+                </div>
+                <a class="bs-wizard-dot" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+
+                <div class="{% if meal_type >= 1 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                <div class="text-center bs-wizard-stepnum"><strong>Lunch</strong></div>
+                <div class="progress">
+                    <div class="progress-bar"></div>
+                </div>
+                <a class="bs-wizard-dot" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+
+                <div class="{% if meal_type >= 2 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                <div class="text-center bs-wizard-stepnum"><strong>Snacks</strong></div>
+                <div class="progress">
+                    <div class="progress-bar"></div>
+                </div>
+                <a class="bs-wizard-dot" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+                <div class="{% if meal_type >= 3 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
+                <div class="text-center bs-wizard-stepnum"><strong>Dinner</strong></div>
+                <div class="progress">
+                    <div class="progress-bar"></div>
+                </div>
+                <a class="bs-wizard-dot" data-toggle="modal" data-target="#myModal"></a>
+                </div>
+
+               
+            </div>
     </div>
-    {% endif %}
-    <div class="x_panel" style="margin-top: 1vh; border-style: none">
-        <div style="display: inline-flex">
-          <h2 style="font-size: 3vh; margin-left: 1vw"><b>Mess Timeline</b></h2>
-        </div>
-        <hr>
-        <div class="x_content">
-                <div class="row bs-wizard" style="border-bottom:0; margin: 0 auto; margin-top: 2vh">
-                    <div class="{% if meal_type >= 0 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
-                    <div class="text-center bs-wizard-stepnum">Breakfast</div>
-                    <div class="progress">
-                        <div class="progress-bar"></div>
+    <div>
+            <center>
+              <div class="amount-details">
+                <div class="col-xs-8 col-md-4" >
+                    <div class="card1 bg-light text-dark">
+                        <div class="card-body">
+                            <center><strong>Remaining Amount :</strong><br/><br/>
+                            {{ user.spend   }}</center>
+                        </div>
                     </div>
-                    <a href="#" class="bs-wizard-dot"></a>
-                    <div class="bs-wizard-info text-center">Display Menu</div>
-                    </div>
-    
-                    <div class="{% if meal_type >= 1 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
-                    <div class="text-center bs-wizard-stepnum">Lunch</div>
-                    <div class="progress">
-                        <div class="progress-bar"></div>
-                    </div>
-                    <a href="#" class="bs-wizard-dot"></a>
-                    <div class="bs-wizard-info text-center">Menu</div>
-                    </div>
-    
-                    <div class="{% if meal_type >= 2 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
-                    <div class="text-center bs-wizard-stepnum">Snacks</div>
-                    <div class="progress">
-                        <div class="progress-bar"></div>
-                    </div>
-                    <a href="#" class="bs-wizard-dot"></a>
-                    <div class="bs-wizard-info text-center">Menu here</div>
-                    </div>
-                    <div class="{% if meal_type >= 3 %} col-xs-2 col-md-2 bs-wizard-step complete {% else%} col-xs-2 col-md-2 bs-wizard-step disabled{% endif %}">
-                    <div class="text-center bs-wizard-stepnum">Dinner</div>
-                    <div class="progress">
-                        <div class="progress-bar"></div>
-                    </div>
-                    <a href="#" class="bs-wizard-dot"></a>
-                    <div class="bs-wizard-info text-center">Menu here</div>
-                    </div>
-                    <div class="col-xs-2 col-md-4" >
-                        <div class="card bg-light text-dark">
+                </div>
+               
+                <div class="col-xs-2 col-md-4" >
+                        <div class="card1 bg-light text-dark">
                             <div class="card-body">
-                                <strong>Remaining Amount :</strong><br>
-                                {{ refund }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-2 col-md-8" >
-                            <div class="card bg-light text-dark">
-                                <div class="card-body">
-                                    <p>Add contents</p>
-                                </div>
-                            </div>
-                        </div>
-                    <div class="col-xs-2 col-md-4" >
-                            <div class="card bg-light text-dark">
-                                <div class="card-body">
-                                    <strong>Spend :</strong><br>
-                                    {{ amount_remaining }}
-                                </div>
+                                <center><strong>Amount Spent :</strong><br/><br/>
+                                {{ amount_remaining }}</center>
                             </div>
                         </div>
                 </div>
-        </div>
+            </div>
+          </center>
     </div>
+    <br/><br/>
+    <center>
+            <a href="scan_result"><button type="submit" class="btn btn-danger">Scan QR</button></a>
+    </center>
+</div>
+
+    <!-- The Modal -->
+<div class="modal" id="myModal" >
+  <div class="modal-dialog modal-lg" style="width: 200px;">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Menu - </h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <center>{{cur_meal}} </center><br>
+        <strong>  <b>Amount :</b> </strong>{{ deduct }}
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+    <br/>
+    <br/>
 {% endblock %}
