--- a/webapp/user_registration_bs4/templates/account/password_reset_from_key_done.html
+++ b/webapp/user_registration_bs4/templates/account/password_reset_from_key_done.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" style="min-height:400px ; margin-top: 8% ;">
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="mt-5 pb-5"></div>
@@ -23,4 +23,7 @@
         </div>
     </div>
 </div>
+<br>
+<br>
+<br>
 {% endblock %}
