--- a/webapp/user_registration_bs4/templates/account/password_set.html
+++ b/webapp/user_registration_bs4/templates/account/password_set.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="min-height:400px ; margin-top: 13% ;" >
     <div class="row">
         <div class="col col-5  mx-auto">
             <div class="mt-5 pb-5"></div>
