--- a/webapp/user_registration_bs4/templates/account/verified_email_required.html
+++ b/webapp/user_registration_bs4/templates/account/verified_email_required.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" style="min-height:400px ; margin-top: 13% ;">
     <div class="mt-5"></div>
     <div class="row">
         <div class="col col-5  mx-auto">
