--- a/webapp/user_registration_bs4/templates/base.html
+++ b/webapp/user_registration_bs4/templates/base.html
@@ -7,171 +7,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/user_registration_bs4.css' %}">
-
-
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  	<link href="https://bootstrapmade.com/demo/themes/Regna/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/themes/Regna/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/themes/Regna/lib/animate/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<style>
-    .card {
-      background: #fff;
-      border-radius: 2px;
-      display: inline-block;
-      height: auto;
-      margin: 1rem;
-      width: 90%;
-    }
-  
-    .card-1 {
-      box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  
-    }
-  
-    .card-1:hover {
-      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  
-    }
-  
-    .bs-wizard {
-      margin-top: 40px;
-    }
-  
-    /*Form Wizard*/
-    .bs-wizard {
-      border-bottom: solid 1px #e0e0e0;
-      padding: 0 0 10px 0;
-    }
-  
-    .bs-wizard > .bs-wizard-step {
-      padding: 0;
-      position: relative;
-    }
-  
-    .bs-wizard > .bs-wizard-step + .bs-wizard-step {
-    }
-  
-    .bs-wizard > .bs-wizard-step .bs-wizard-stepnum {
-      color: #595959;
-      font-size: 16px;
-      margin-bottom: 5px;
-    }
-  
-    .bs-wizard > .bs-wizard-step .bs-wizard-info {
-      color: #999;
-      font-size: 14px;
-    }
-  
-    .bs-wizard > .bs-wizard-step > .bs-wizard-dot {
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      display: block;
-      background: lightskyblue;
-      top: 45px;
-      left: 50%;
-      margin-top: -15px;
-      margin-left: -15px;
-      border-radius: 50%;
-    }
-  
-    .bs-wizard > .bs-wizard-step > .bs-wizard-dot:after {
-      content: ' ';
-      width: 14px;
-      height: 14px;
-      background: skyblue;
-      border-radius: 50px;
-      position: absolute;
-      top: 8px;
-      left: 8px;
-    }
-  
-    .bs-wizard > .bs-wizard-step > .progress {
-      position: relative;
-      border-radius: 0px;
-      height: 8px;
-      box-shadow: none;
-      margin: 20px 0;
-    }
-  
-    .bs-wizard > .bs-wizard-step > .progress > .progress-bar {
-      width: 0px;
-      box-shadow: none;
-      background: skyblue;
-    }
-  
-    .bs-wizard > .bs-wizard-step.complete > .progress > .progress-bar {
-      width: 100%;
-    }
-  
-    .bs-wizard > .bs-wizard-step.active > .progress > .progress-bar {
-      width: 50%;
-    }
-  
-    .bs-wizard > .bs-wizard-step:first-child.active > .progress > .progress-bar {
-      width: 0%;
-    }
-  
-    .bs-wizard > .bs-wizard-step:last-child.active > .progress > .progress-bar {
-      width: 100%;
-    }
-  
-    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot {
-      background-color: #f5f5f5;
-    }
-  
-    .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot:after {
-      opacity: 0;
-    }
-  
-    .bs-wizard > .bs-wizard-step:first-child > .progress {
-      left: 50%;
-      width: 50%;
-    }
-  
-    .bs-wizard > .bs-wizard-step:last-child > .progress {
-      width: 50%;
-    }
-  
-    .bs-wizard > .bs-wizard-step.disabled a.bs-wizard-dot {
-      pointer-events: none;
-    }
-  
-    @media (max-width: 1023px) {
-      .hide-0-to-1024 {
-        display: none;
-      }
-    }
-  
-    @media (min-width: 1024px) {
-      .hide-1024-up {
-        display: none;
-      }
-    }
-  
-    /*END Form Wizard*/
-  
-    ul.stats-overview li {
-      width: 15%;
-    }
-  
-    .disabled, .disabled:hover, .disabled:focus {
-      cursor: pointer !important;
-    }
-</style>
-<body>
+<body id="main" style="background-color: #efebe4; padding-left: 0px; padding-right: 0px; padding-top: 0px; ">
+
+
+
 
 {% include 'header.html' %}
+
+{% include 'user_profile/sidebar.html' %}
+
+
 
 {% block content %}{% endblock %}
 
 {% include 'footer.html' %}
 
 <script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/nprogress/nprogress.js"></script>
+
 <script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/select2/dist/js/select2.full.min.js"></script>
 <script src="https://cdn.iris.nitk.ac.in/new_layout/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="https://cdn.iris.nitk.ac.in/new_layout/js/jquery_ujs.js"></script>
 <script src="https://cdn.iris.nitk.ac.in/new_layout/js/custom.js"></script>
 <script src="https://cdn.iris.nitk.ac.in/new_layout/js/bootstrap-responsive-tabs.js"></script>
-
 
 </body>
 </html>
