--- a/webapp/user_profile/templates/user_profile/sidebar.html
+++ b/webapp/user_profile/templates/user_profile/sidebar.html
@@ -1,21 +1,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 	body {
 	  transition: background-color .5s;
 	}
-	.sidenav {
-	  margin-top: 68px;
-	  height: 100%;
-	  width: 0;
-	  position: fixed;
-	  z-index: 1;
-	  top: 0;
-	  left: 0;
-	  background-color: #cb8555;
-	  overflow-x: hidden;
-	  transition: 0.5s;
-	  padding-top: 10%;
-	  }
+    .sidenav {
+        margin-top: 68px;
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #cb8555;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 10%;
+    }
 	.sidenav a {
 	  padding: 8px 8px 8px 32px;
 	  text-decoration: none;
@@ -45,7 +46,7 @@
 	  .sidenav {padding-top: 15px;}
 	  .sidenav a {font-size: 18px;}
 	}
-	/*.img-bg{
+    /*.img-bg{
 	  opacity: 0.2;
 	  margin-bottom: 0px;
 	  background: #000 url('http://homelivingct.com/wp-content/uploads/2018/05/cafeteria-tables-portable-used-benches-metal-stacking-training-lab-activity-bench-canteen-library-manufacturers-resin-out-galvin-utility-seminar-wood-commercial.jpg') top center no-repeat;
@@ -59,21 +60,22 @@
 	  z-index: 1;
 	}
 	.sidenav, .cont{
-		z-index: 2;
+		z-index: 2; class="st-menu st-effect-7" id="menu-7"
 	}*/
+
 </style>
     <div id="mySidenav" class="sidenav img-cont" >
     	<div class="img-bg"></div>
     	<div class="cont">
     	<br/>
     	<br/>
-        <ul class="list-group">
-        	<center>
-            <li class="w3-bar-item w3-button"><a href="{% url 'profile' %}">Profile Details</a></li>
+        <ul class="list-group" style="padding-left:10px; padding-right:10px; margin-right:0px;">
+
+            <li class="w3-bar-item w3-button"><a href="{% url 'profile' %}"><i class="fa fa-address-card" style="font-size:20px; padding-right:20px;"></i>profile details </a></li>
             <!-- <li class="w3-bar-item w3-button"><a href="{%url 'scan_result' %}">Scan QR</a></li> -->
-            <li class="w3-bar-item w3-button"><a href="{% url 'dashboard' %}">Dashboard</a></li>
-            <li class="w3-bar-item w3-button"><a href="{% url 'status' %}">Account Status</a></li>
-        	</center>
+            <li class="w3-bar-item w3-button"><a href="{% url 'dashboard' %}"><i class="fa fa-dashboard" style="font-size:20px; padding-right:20px;"></i>dashboard</a></li>
+            <li class="w3-bar-item w3-button"><a href="{% url 'status' %}"><i class="fa fa-bullseye" style="font-size:20px; padding-right:20px;"></i>account status</a></li>
+
         </ul>
     </div>
     </div>
@@ -81,16 +83,16 @@
 <script>
 function openNav() {
 	var flag = document.getElementById("mySidenav").style.width;
-	if(flag!='450px'){
-	  document.getElementById("mySidenav").style.width = "450px";
-	  document.getElementById("main").style.marginLeft = "25%";
-	  document.body.style.backgroundColor = "rgba(0,1,0,.4);";
+	if(flag!='300px'){
+	  document.getElementById("mySidenav").style.width = "300px";
+	  document.getElementById("main").style.marginLeft = "20%";
+        document.getElementById("main").style.backgroundColor = "rgba(0,0,0,1);";
 	}
 	//	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	else{
 	  document.getElementById("mySidenav").style.width = "0";
 	  document.getElementById("main").style.marginLeft= "0";
-	  document.body.style.backgroundColor = "white";
+        document.body.style.backgroundColor = "#efebe4";
 	}
 }
 </script>
