--- a/webapp/user_registration_bs4/templates/footer.html
+++ b/webapp/user_registration_bs4/templates/footer.html
@@ -31,7 +31,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>App_Name</strong>. All Rights Reserved
+        &copy; Copyright <strong>Rimborso</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
