--- a/webapp/user_registration_bs4/templates/footer.html
+++ b/webapp/user_registration_bs4/templates/footer.html
@@ -31,16 +31,10 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>App_Name</strong>. All Rights Reserved
+        &copy; Copyright <strong>Rimborso</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
-        Designed by <a href="https://bootstrapmade.com/">Bootstrap4</a>
+        SE project under <a href="http://infotech.nitk.ac.in/faculty/biju-r-mohan">Biju Mohan Sir</a>
       </div>
     </div>
   
