--- a/webapp/user_profile/templates/user_profile/result.html
+++ b/webapp/user_profile/templates/user_profile/result.html
@@ -68,7 +68,7 @@
 
         .modal-header {
           padding: 2px 16px;
-          background-color: #fd7e14;
+          background-color: #c8641f;
           color: white;
         }
 
@@ -76,7 +76,7 @@
 
         .modal-footer {
           padding: 2px 16px;
-          background-color: #fd7e14;
+          background-color: #c8641f;
           color: white;
         }
         .section-header2{
