--- a/webapp/webpages/templates/webpages/docs.html
+++ b/webapp/webpages/templates/webpages/docs.html
@@ -97,7 +97,6 @@
 			There are four functions that the <strong>side navigation bar</strong> does for you.
 			<ul class="list"><br/>
 			 <li> Navigate to edit your profile details through 'Profile Details' link.</li>
-			 <li> Scan the QR code through the link provided.</li>
 			 <li> Navigate to your user <strong>dashboard</strong> which is filled with mess and refund details.</li>
 			 <li> Finally, you can deactivate your account if required by navigating through the 'Account Status' link. This means that you are opting out of the mess. </li>
 			</ul>
@@ -131,7 +130,7 @@
 <div><br>
 	<h5>Scanning The QR Code</h5><br>
 	<li>
-		You can access this page from either the <strong>side navigation bar</strong> or the button in user <strong>dashboard</strong>. After pressing the link/button, the application would need permission to access your camera to scan the QR code of whichever mess you want. Currently, there are a total of ten messes in the database, eight boys' and two girls'. Each of them have a unique QR code and you can scan any one of them depending on your preferences. The cost of the meal would be updated on the cards in the <strong>dashboard</strong> showing you the required details.
+		You can access this page from either the button in user <strong>dashboard</strong>. After pressing the link/button, the application would need permission to access your camera to scan the QR code of whichever mess you want. Currently, there are a total of ten messes in the database, eight boys' and two girls'. Each of them have a unique QR code and you can scan any one of them depending on your preferences. The cost of the meal would be updated on the cards in the <strong>dashboard</strong> showing you the required details.
 	</li>
 </div>
 </section>
